# lm-drone

./: .gitignore  CHANGELOG.md  CREATEENV.md  LICENSE  LICENSE.md  LOG.md  README.md  environment-arm64.yml  environment.yml
Airsim/: settings-api-enabled.json  settings-px4.json
airsim-kc/: .env  README.md  advanced_control.py  simple_control.py
airsim-mcp/: .env  README.md  mcp_server.py
airsim-plan/: .env.example  .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml  requirements.txt
airsim-plan/.codex/: Explanation.md  Prompts.md
airsim-plan/examples/: perimeter_north_01.json
airsim-plan/manifests/: perimeter_north_01.json
airsim-plan/scripts/: fly_with_yolo.py
airsim-plan/src/airsim_plan/: __init__.py  config.py
airsim-plan/src/airsim_plan/bridge/: __init__.py  airsim_bridge.py  loop_runner.py
airsim-plan/src/airsim_plan/cli/: __init__.py  main.py
airsim-plan/src/airsim_plan/llm/: __init__.py  client.py  json_extract.py
airsim-plan/src/airsim_plan/missions/: __init__.py  manifest.py  planner.py
airsim-plan/src/airsim_plan/prompts/: compiler_system.md  tactical_system.md
airsim-plan/src/airsim_plan/schemas/: manifest_schema.json
airsim-plan/tests/: test_bridge.py  test_cli.py  test_config.py  test_llm_extract.py  test_manifest_schema.py  test_planner.py
airsim-poc/: my_hello_drone.py
callibration_flight/: airsim_commander.py  airsim_iterator.py  airsim_logger.py  attitude_comparison_Treal_vs_sim_summary.csv  calibration_path.txt  compare_T_real_vs_sim_attitude.py  telemetry_20260205_2146.csv  telemetry_20260409_2047.csv  (+52 more)
(+983 files in other folders)
